--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,84 @@
-h1 {
-  color: #369;
+body {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
+  color: #444;
+  font-size: 14px;
+  margin: 30px;
+  line-height: 1.4;
+}
+h1 {
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.form-row {
+  padding: 10px 0;
+  max-width: 600px;
+  margin: 0 auto;
+}
+.form-row label {
+  display: block;
+  padding-bottom: 5px;
+  color: #666;
+}
+.form-row input,
+.form-row select,
+.form-row button {
+  display: block;
+  height: 42px;
+  padding: 10px;
+  font-size: 14px;
+  width: 100%;
+  box-sizing: border-box;
+}
+.form-row button {
+  margin: 20px 0;
+  border: 0 none;
+  cursor: pointer;
+  background-color: #0077bf;
+  color: white;
+  font-weight: bold;
+}
+.notifications-container {
+  position: fixed;
+  right: 20px;
+  top: 20px;
+  width: 300px;
+}
+.notifications-container .notification {
+  position: relative;
+  min-height: 50px;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  border-radius: 4px;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-left: 5px solid white;
+}
+.notifications-container .notification.info {
+  border-left-color: #0077bf;
+}
+.notifications-container .notification.warning {
+  border-left-color: #e29103;
+}
+.notifications-container .notification.error {
+  border-left-color: #c50000;
+}
+.notifications-container .notification-title {
+  font-size: 16px;
+  margin: 0 0 5px;
+}
+.notifications-container .notification-body {
+  margin: 0;
+  font-size: 12px;
+}
+.notifications-container .notification-close {
+  position: absolute;
+  right: 2px;
+  top: 0px;
+  color: white;
+  background: transparent;
+  border: 0;
+  font-size: 27px;
+  line-height: 1;
+  cursor: pointer;
 }
